[package]
name = "cargo-key"
authors = ["Daniel Drodt <daniel.drodt@tu-darmstadt.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
serde = { version = "1.0.213", features = ["serde_derive"] }
serde_json = "1.0.132"
key-wrapper = { path = "../key-wrapper" }
toml = "0.8.19"
env_logger = "0.11.5"

[package.metadata.rust-analyzer]
rustc_private = true
